@@ -1,7 +1,7 @@
 1..980
 # Running under perl version 5.008007 for linux
-# Current time local: Sun Nov  4 13:32:55 2007
-# Current time GMT:   Sun Nov  4 04:32:55 2007
+# Current time local: Wed Nov  7 19:52:35 2007
+# Current time GMT:   Wed Nov  7 10:52:35 2007
 # Using Test.pm version 1.25
 # t/tokenizer-test-2.dat
 ok 1
