@@ -1,3 +1,7 @@
+2007-11-07  Wakaba  <wakaba@suika.fam.cx>
+
+	* HTML.pm: Make |rel="up up"| conforming (HTML5 revision 1130).
+
 2007-11-04  Wakaba  <wakaba@suika.fam.cx>
 
 	* HTML.pm: Allow <html manifest=URI>.
